# qr-maker

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/domains/: qr_code.py
src/master_data/: master_data.py
src/qr_settings/: qr_size_map.py
src/schemas/: QrCode.py
src/static/css/: styles.css
src/templates/: input.html  select.html
