[tool.poetry]
name = "qr-maker"
version = "0.1.0"
description = ""
authors = ["nkmr-kz <kazutaka.nakamura.kzz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.78.0"
uvicorn = "^0.18.1"
PyQRCode = "^1.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
